--- a/index.html
+++ b/index.html
@@ -425,12 +425,12 @@
         <!-- 公告部分 -->
         <section>
             <div class="announcement">
-                <h3><i class="fas fa-bullhorn"></i> 最新公告</h3>
+              <h3><i class="fas fa-bullhorn"></i> 最新公告</h3>
                 <ul class="announcement-list">
-                    <li><a href="#">关于举办"方块建筑大赛"的通知</a> <span style="float: right; color: #999;">2023-10-15</span></li>
-                    <li><a href="#">海口镇新区规划方案公示</a> <span style="float: right; color: #999;">2023-10-10</span></li>
-                    <li><a href="#">关于维护服务器稳定运行的公告</a> <span style="float: right; color: #999;">2023-10-05</span></li>
-                    <li><a href="#">海口镇居民积分奖励制度实施办法</a> <span style="float: right; color: #999;">2023-09-28</span></li>
+                  <li><a href="#">关于举办"方块建筑大赛"的通知</a> <span style="float: right; color: #999;">2025-10-15</span></li>
+                  <li><a href="#">海口镇新区规划方案公示</a> <span style="float: right; color: #999;">2025-10-10</span></li>
+                  <li><a href="#">关于维护服务器稳定运行的公告</a> <span style="float: right; color: #999;">2025-10-05</span></li>
+                  <li><a href="#">海口镇居民积分奖励制度实施办法</a> <span style="float: right; color: #999;">2025-09-28</span></li>
                 </ul>
             </div>
         </section>
@@ -444,8 +444,8 @@
                         <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" alt="海口灯塔">
                     </div>
                     <div class="card-body">
-                        <h3>海口灯塔</h3>
-                        <p>海口镇标志性建筑，建于方块历202年，为往来船只提供导航。塔高64格，是观赏日落的绝佳地点。</p>
+                      <h3>海口镇海楼</h3>
+                      <p>海口镇标志性建筑，建于方块历202年，为往来船只提供导航。塔高64格，是观赏日落的绝佳地点。</p>
                     </div>
                 </div>
                 <div class="card attraction-card">
@@ -453,8 +453,8 @@
                         <img src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" alt="方块广场">
                     </div>
                     <div class="card-body">
-                        <h3>方块广场</h3>
-                        <p>海口镇中心广场，周围环绕着各类商店和市政建筑。每周日在此举办集市，是居民交流的重要场所。</p>
+                      <h3>村民交易所</h3>
+                      <p>海口镇中心广场，周围环绕着各类商店和市政建筑。每周日在此举办集市，是居民交流的重要场所。</p>
                     </div>
                 </div>
                 <div class="card attraction-card">
@@ -462,8 +462,8 @@
                         <img src="https://images.unsplash.com/photo-1505118380757-91f5f5632de0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" alt="金色沙滩">
                     </div>
                     <div class="card-body">
-                        <h3>金色沙滩</h3>
-                        <p>海口镇最长的天然沙滩，沙质细腻，是游泳、日光浴和建造沙堡的理想场所。夏季夜晚还会举办篝火晚会。</p>
+                      <h3>四核刷铁机</h3>
+                      <p>海口镇最长的天然沙滩，沙质细腻，是游泳、日光浴和建造沙堡的理想场所。夏季夜晚还会举办篝火晚会。</p>
                     </div>
                 </div>
             </div>
@@ -519,15 +519,15 @@
                         <ul class="policy-list">
                             <li>
                                 <div class="policy-title">建筑高度限制</div>
-                                <div>居民区建筑不得超过32格，商业区建筑不得超过48格。</div>
+                                <div>不要顶破天就好awa</div>
                             </li>
                             <li>
                                 <div class="policy-title">建筑材料要求</div>
-                                <div>主要建筑立面必须使用石质材料，禁止使用泥土作为外墙材料。</div>
+                                <div>自由安排啦</div>
                             </li>
                             <li>
                                 <div class="policy-title">红石设备管理</div>
-                                <div>大型红石设备需提前申请，不得影响周边居民正常生活。</div>
+                                <div>目前服务器禁止红石</div>
                             </li>
                         </ul>
                     </div>
@@ -538,15 +538,15 @@
                         <ul class="policy-list">
                             <li>
                                 <div class="policy-title">土地申请流程</div>
-                                <div>新居民需提交建筑规划图，经审核通过后方可分配土地。</div>
+                                <div>新居民需提出建筑规划图，经审核通过后方可分配土地。</div>
                             </li>
                             <li>
                                 <div class="policy-title">公共区域保护</div>
-                                <div>禁止在公共区域私自建造，违者将面临罚款和拆除。</div>
+                                <div>禁止在公共区域私自建造，违者将面临处罚和拆除。</div>
                             </li>
                             <li>
                                 <div class="policy-title">地下空间利用</div>
-                                <div>地下建筑深度不得超过16格，需保留地面自然景观。</div>
+                                <div>自由不跨界就好</div>
                             </li>
                         </ul>
                     </div>
@@ -556,15 +556,15 @@
                     <div class="card-body">
                         <div class="icon-box">
                             <i class="fas fa-home"></i>
-                            <div>新居民安置服务：提供基础建材包和土地指导</div>
+                            <div>新居民安置服务：提供土地指导</div>
                         </div>
                         <div class="icon-box">
                             <i class="fas fa-tools"></i>
-                            <div>建筑咨询服务：专业建筑师提供设计建议</div>
+                            <div>建筑咨询服务：B站提供设计建议</div>
                         </div>
                         <div class="icon-box">
                             <i class="fas fa-shield-alt"></i>
-                            <div>安全防护：定期巡逻，防止怪物入侵居民区</div>
+                            <div>安全防护：定期巡逻，防熊孩子。</div>
                         </div>
                         <div class="icon-box">
                             <i class="fas fa-handshake"></i>
@@ -603,24 +603,23 @@
                     <ul class="footer-links">
                         <li><a href="#">镇长信箱</a></li>
                         <li><a href="#">意见征集</a></li>
-                        <li><a href="#">网上调查</a></li>
+                        <li></li>
                         <li><a href="#">社区论坛</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h3>关注我们</h3>
                     <ul class="footer-links">
-                        <li><a href="#">官方服务器IP</a></li>
-                        <li><a href="#">Discord社区</a></li>
-                        <li><a href="#">方块世界论坛</a></li>
-                        <li><a href="#">YouTube频道</a></li>
+                      <li><a href="#">服务器IP</a></li>
+                      <li></li>
+                        <li></li>
+                        <li></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
-                <p>Copyright © 2023 Minecraft海口镇人民政府 版权所有</p>
-                <p>方块世界坐标：X: 1250, Z: -340 | 服务器版本：1.19.2</p>
-                <div class="entertainment-notice">本网站内容纯属虚构，仅供娱乐</div>
+              <p><em>haikou</em> © 2025 Minecraft海口镇人民政府 版权所有</p>
+              <div class="entertainment-notice">本网站内容纯属虚构，仅供娱乐</div>
             </div>
         </div>
     </footer>
