--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft海口镇 - 官方宣传网站</title>
+    <title>Minecraft海口镇 - 地方宣传网站</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* 基础样式 */
@@ -429,8 +429,8 @@
                 <ul class="announcement-list">
                   <li><a href="#">关于举办"方块建筑大赛"的通知</a> <span style="float: right; color: #999;">2025-10-15</span></li>
                   <li><a href="#">海口镇新区规划方案公示</a> <span style="float: right; color: #999;">2025-10-10</span></li>
-                  <li><a href="#">关于维护服务器稳定运行的公告</a> <span style="float: right; color: #999;">2025-10-05</span></li>
-                  <li><a href="#">海口镇居民积分奖励制度实施办法</a> <span style="float: right; color: #999;">2025-09-28</span></li>
+                  <li><a href="#">关于维护社区氛围稳定的公告</a> <span style="float: right; color: #999;">2025-10-05</span></li>
+                  <li><a href="#">海口镇居民建筑奖励制度实施办法</a> <span style="float: right; color: #999;">2025-09-28</span></li>
                 </ul>
             </div>
         </section>
@@ -477,31 +477,31 @@
                 <div class="card-body">
                     <div class="timeline">
                         <div class="timeline-item">
-                            <div class="timeline-date">方块历203年10月20日</div>
+                            <div class="timeline-date">2025年11月16日</div>
                             <div class="timeline-content">
-                                <h4>秋季建筑大赛</h4>
-                                <p>主题："未来城市"，地点：新区规划区，时间：全天</p>
+                              <h4>市政厅建设中</h4>
+                              <p>地点：新区规划区，时间：11·16起</p>
                             </div>
                         </div>
                         <div class="timeline-item">
-                            <div class="timeline-date">方块历203年10月25日</div>
+                            <div class="timeline-date">2025年11月11日</div>
                             <div class="timeline-content">
                                 <h4>红石技术交流会</h4>
                                 <p>分享最新红石机械设计，地点：市政厅会议室，时间：14:00-17:00</p>
                             </div>
                         </div>
                         <div class="timeline-item">
-                            <div class="timeline-date">方块历203年11月1日</div>
+                            <div class="timeline-date">2025年11月1日</div>
                             <div class="timeline-content">
                                 <h4>万圣节特别活动</h4>
-                                <p>怪物装扮游行与南瓜雕刻比赛，地点：方块广场，时间：18:00-22:00</p>
+                                <p>怪物装扮游行与南瓜雕刻比赛，地点：喷泉广场，时间：18:00-22:00</p>
                             </div>
                         </div>
                         <div class="timeline-item">
-                            <div class="timeline-date">方块历203年11月10日</div>
+                            <div class="timeline-date">2025年7月25日</div>
                             <div class="timeline-content">
-                                <h4>新区开放仪式</h4>
-                                <p>海口镇新区正式对外开放，地点：新区入口，时间：10:00</p>
+                              <h4>政府落成仪式</h4>
+                              <p>海口镇正式对外开放</p>
                             </div>
                         </div>
                     </div>
@@ -650,15 +650,6 @@
                 });
             });
             
-            // 模拟公告更新
-            const announcementList = document.querySelector('.announcement-list');
-            if (announcementList) {
-                setTimeout(() => {
-                    const newItem = document.createElement('li');
-                    newItem.innerHTML = '<a href="#">紧急通知：服务器将于明日凌晨进行维护</a> <span style="float: right; color: #999;">2023-10-18</span>';
-                    announcementList.prepend(newItem);
-                }, 3000);
-            }
         });
     </script>
 </body>
