--- a/政务服务.html
+++ b/政务服务.html
@@ -400,8 +400,8 @@
     <div class="top-bar">
         <div class="container">
             <div class="top-bar-content">
-                <div>Minecraft海口镇官方门户网站</div>
-                <div>服务时间：方块世界时间 8:00-18:00</div>
+                <div>Minecraft海口镇地方门户网站</div>
+                <div>服务时间：服务时间：读书期间周五晚到周日晚</div>
             </div>
         </div>
     </div>
@@ -686,4 +686,5 @@
         });
     </script>
 </body>
+
 </html>
