--- a/交流互动.html
+++ b/交流互动.html
@@ -400,7 +400,7 @@
     <div class="top-bar">
         <div class="container">
             <div class="top-bar-content">
-                <div>Minecraft海口镇官方门户网站</div>
+                <div>Minecraft海口镇地方门户网站</div>
                 <div>服务时间：服务时间：读书期间周五晚到周日晚</div>
             </div>
         </div>
@@ -658,3 +658,4 @@
 </body>
 
 </html>
+
