--- a/关于我们.html
+++ b/关于我们.html
@@ -401,7 +401,7 @@
         <div class="container">
             <div class="top-bar-content">
                 <div>Minecraft海口镇地方门户网站</div>
-                <div>服务时间：服务时间：读书期间周五晚到周日晚</div>
+                <div>服务时间：读书期间周五晚到周日晚</div>
             </div>
         </div>
     </div>
@@ -654,3 +654,4 @@
 </body>
 
 </html>
+
