--- a/index.html
+++ b/index.html
@@ -115,10 +115,16 @@
         }
         
         /* 轮播图 */
-.banner {
-    background: linear-gradient(rgba(26, 60, 110, 0.8), rgba(26, 60, 110, 0.8)), url('images/index.jpg');
-    /* 其他样式保持不变 */
-}
+        .banner {
+            background: linear-gradient(rgba(26, 60, 110, 0.8), rgba(26, 60, 110, 0.8)), url('https://images.unsplash.com/photo-1550745165-9bc0b252726f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80');
+            background-size: cover;
+            background-position: center;
+            height: 400px;
+            display: flex;
+            align-items: center;
+            color: white;
+            text-align: center;
+        }
         
         .banner-content {
             max-width: 800px;
