--- a/关于我们.html
+++ b/关于我们.html
@@ -507,7 +507,7 @@
                     </div>
                     <div class="leader-name">Shiren2011</div>
                     <div class="leader-position">海口镇书记兼镇长</div>
-                    <p>全面负责海口镇的党务和行政工作，领导镇政府各部门开展工作，制定和实施城镇发展规划。</p>
+                    <p>海口镇的建设者，全面负责海口镇的工作，领导镇政府各部门开展工作，制定和实施城镇发展规划。</p>
                 </div>
                 <div class="card leader-card">
                     <div class="leader-image">
@@ -515,7 +515,7 @@
                     </div>
                     <div class="leader-name">Mienmumu</div>
                     <div class="leader-position">副镇长兼主任</div>
-                    <p>协助镇长处理日常行政事务，负责社区服务、居民事务和活动组织工作。</p>
+                    <p>协助处理日常行政事务，负责社区服务、居民事务和活动组织工作。</p>
                 </div>
                 <div class="card leader-card">
                     <div class="leader-image">
@@ -537,13 +537,13 @@
                     <div class="grid">
                         <div>
                             <h3>办公地址</h3>
-                            <p>海口镇市政厅大楼<br>方块世界坐标：X: 1250, Y: 64, Z: -340</p>
+                            <p>海口镇市政厅<br></p>
                             
                             <h3>办公时间</h3>
-                            <p>方块世界时间：周一至周五 8:00-18:00</p>
+                            <p>周末时间：周五晚至周日早 8:00-18:00</p>
                             
                             <h3>联系方式</h3>
-                            <p>游戏内邮箱：/mail send haikou_gov</p>
+                            <p>邮箱：你猜@qq.com</p>
                             <p>Discord社区：海口镇官方服务器</p>
                         </div>
                         <div>
@@ -654,5 +654,6 @@
 </body>
 
 </html>
+
 
 
