--- a/关于我们.html
+++ b/关于我们.html
@@ -418,7 +418,7 @@
                     <li><a href="index.html">首页</a></li>
                     <li><a href="关于我们.html" class="active">关于我们</a></li>
                     <li><a href="政务服务.html">政务服务</a></li>
-                    <li><a href="互动交流.html">互动交流</a></li>
+                    <li><a href="交流互动.html">交流互动</a></li>
                 </ul>
             </nav>
         </div>
@@ -654,6 +654,7 @@
 </body>
 
 </html>
+
 
 
 
