--- a/交流互动.html
+++ b/交流互动.html
@@ -431,6 +431,22 @@
     </div>
 </div>
 
+<script src="https://giscus.app/client.js"
+        data-repo="seaside-k/haikou.github.io"
+        data-repo-id="R_kgDOQWPXBg"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOQWPXBs4Cx10V"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+</script>
+    
 <!-- 主要内容 -->
 <main class="container">
     <!-- 镇长信箱 -->
@@ -658,5 +674,6 @@
 </body>
 
 </html>
+
 
 
