--- a/关于我们.html
+++ b/关于我们.html
@@ -597,12 +597,12 @@
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h3>互动交流</h3>
+                    <h3>交流互动</h3>
                     <ul class="footer-links">
-                        <li><a href="互动交流.html">镇长信箱</a></li>
-                        <li><a href="互动交流.html">意见征集</a></li>
-                        <li><a href="互动交流.html">社区论坛</a></li>
-                        <li><a href="互动交流.html">关注我们</a></li>
+                        <li><a href="交流互动">镇长信箱</a></li>
+                        <li><a href="交流互动">意见征集</a></li>
+                        <li><a href="交流互动">社区论坛</a></li>
+                        <li><a href="交流互动">关注我们</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -654,6 +654,7 @@
 </body>
 
 </html>
+
 
 
 
